# SimplyLang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SYNTAX_NOTES.md  building_instructions.md  log.txt  pyproject.toml  requirements.txt  todo.md
.github/: issue_template.md  pull_request_template.md
.github/workflows/: CODEOWNERS  test.yml
builder/installers/: simplylang_installer.iss
docs/: children-first-roadmap.md  documentation.md  future-vm.md  language-spec.md  visual-world-runtime.md
src/: interpreter.py  lexer.py  praser.py  simply.py
src/simplylang/: __init__.py  api.py  ast.py  cli.py  diagnostics.py  interpreter.py  lexer.py  source.py  token.py
src/simplylang/bytecode/: __init__.py  model.py
src/simplylang/parser/: __init__.py  expressions.py  statements.py
src/simplylang/runtime/: __init__.py  builtins.py  control.py  environment.py  values.py
src/simplylang/semantic/: __init__.py  resolver.py
tests/: __init__.py
tests/language/: system.expected.stdout  test_golden_programs.py
tests/system/: test.simply
tests/unit/: test_api_runtime.py  test_architecture.py  test_bytecode.py  test_lexer.py  test_parser.py  test_runtime.py  test_semantic.py
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.css  App.jsx  index.css
website/src/components/: AsMentionedOn.jsx  CallToAction.jsx  Docs.jsx  DownloadPlatform.jsx  Footer.jsx  HeroSection.jsx  JourneySection.jsx  LearningSupport.jsx  MissionSection.jsx  Navigation.jsx  Playground.jsx  ProjectGallery.jsx  (+4 more)
(+3 files in other folders)
