[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplylang"
version = "0.1.0"
description = "A beginner-friendly programming language with natural-language syntax."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
simplylang = "simplylang.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
ignore = ["website"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]
